# levy_enzyme_simulator

./: LICENSE  README.md
run/: Untitled.ipynb  active_site.pt  cloud_log.txt  pointViewer.py  run.sh  test.par  test_count.txt
src/: Makefile
src/base/include/: Cell.h  Cloud.hpp  CloudBase.hpp  CloudCell.hpp  CloudCell1.hpp  Log.hpp  ParameterReader.h  Simulator.hpp  Surfaces.hpp  SurfacesBox.hpp  SurfacesCell.hpp  SurfacesSphere.hpp  Vec3.hpp  Walker.h  WalkerBase.h  WalkerEnzyme.h  colormod.h  date.h
src/base/src/: Cell.cpp  ParameterReader.cpp  SurfacesCell.cpp  Vector3D.cpp  Walker.cpp  WalkerBase.cpp  WalkerEnzyme.cpp  progress_bar.cpp
src/enzymeWalker/: CMakeLists.txt  app_cloud2_linux.cpp  cloud_log.txt  enzymeWalker.cpp
src/levyWalker/: CMakeLists.txt  levyWalker.cpp
src/simpleWalker/: CMakeLists.txt  README.md  simpleWalker.cpp  test.par
test/: MM-test.par  cloud_log.txt  test.par  test_count.txt
tools/: 3Dviwer.py  pointAnimation.py
